# -*- coding: utf-8 -*-
2008-08-13  Wilson Bilkovich  <wilson@supremetyrant.com>

	* lib/rubygems/uninstaller.rb:	Fix binary script uninstallation.
		Bug #21234 by Neil Wilson.
	* test/test_gem_commands_uninstall_command.rb: Added

2008-08-12  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Try to create directory before diverting
	to ~/.gems.
	* lib/rubygems/uninstaller.rb:  Fix uninstallation with -i.  Bug
	#20812 by John Clayton.  Have #remove_all call #uninstall_gem so hooks
	get called.  Bug #21242 by Neil Wilson.
	* lib/rubygems/commands/update_command.rb:  Fix updating RubyGems when
	no previous rubygems-update is installed.  Bug #20775 by Hemant Kumar.

2008-08-11  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Fix HTTPS support.  Patch #21072 by
	Alex Arnell.  Fix Not Modified handling.  Bug #21310 by Gordon
	Thiesfeld.

2008-07-11  Luis Lavena  <luislavena@gmail.com>

	* setup.rb: Properly build --destdir folder structure using Pathname.
	* test/mockgemui.rb: Fix warnings about instance variables in a module.

2008-07-02  Phil Hagelberg <technomancy@gmail.com>

	* lib/rubygems/defaults.rb: Add Gem.user_dir to use paths like
	~/.gem/ruby/1.8/gems and the like instead of just ~/.gem. Update
	remote fetcher and installer to use it.

2008-07-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Add #gem_home, #bin_dir for hooks.  Use
	DependencyInstaller's source_index so reinstallation via -i does not
	fail.
	* lib/rubygems/uninstaller.rb:  Add #gem_home, #bin_dir for hooks.
	* lib/rubygems/commands/query_command.rb:  Don't print LOCAL/REMOTE
	gems if stdout is not a TTY.
	* lib/rubygems/commands/query_command.rb:  Use the regexp we already
	have for `gem list --installed`.  Bug #20876 by Nick Hoffman.
	* lib/rubygems/commands/which_command.rb:  Clarify what `gem which` is
	for.

2008-06-30  Eric Hodel  <drbrain@segment7.net>

	* test/test_ext_configure_builder.rb:  Locale-free patch by Yusuke