@@ -69,6 +69,8 @@ class Gem::Commands::QueryCommand < Gem::Command
       raise Gem::SystemExitException, exit_code
     end
 
+    dep = Gem::Dependency.new name, Gem::Requirement.default
+
     if local? then
       if ui.outs.tty? then
         say
@@ -76,7 +78,7 @@ class Gem::Commands::QueryCommand < Gem::Command
         say
       end
 
-      specs = Gem.source_index.search name
+      specs = Gem.source_index.search dep
 
       spec_tuples = specs.map do |spec|
         [[spec.name, spec.version, spec.original_platform, spec], :local]
@@ -94,7 +96,6 @@ class Gem::Commands::QueryCommand < Gem::Command
 
       all = options[:all]
 
-      dep = Gem::Dependency.new name, Gem::Requirement.default
       begin
         fetcher = Gem::SpecFetcher.fetcher
         spec_tuples = fetcher.find_matching dep, all, false
