@@ -55,7 +55,7 @@ class Gem::Uninstaller
   # directory, and the cached .gem file.
 
   def uninstall
-    list = @source_index.search(/^#{@gem}$/, @version)
+    list = @source_index.find_name @gem, @version
 
     if list.empty? then
       raise Gem::InstallError, "Unknown gem #{@gem} #{@version}"
@@ -111,7 +111,7 @@ class Gem::Uninstaller
     if gemspec.executables.size > 0 then
       bindir = @bin_dir ? @bin_dir : (Gem.bindir @gem_home)
 
-      list = @source_index.search(gemspec.name).delete_if { |spec|
+      list = @source_index.find_name(gemspec.name).delete_if { |spec|
         spec.version == gemspec.version
       }
 
