@@ -1,4 +1,14 @@
 # -*- coding: utf-8 -*-
+2008-08-14  Wilson Bilkovich  <wilson@supremetyrant.com>
+
+	* lib/rubygems/source_index.rb: Deprecate options to 'search' other than 
+	Gem::Dependency instances and issue warning until November 2008.
+	* lib/rubygems/platform.rb:	Remove deprecated constant warnings and really 
+		deprecate them.
+	* Rakefile: If the SETUP_OPTIONS environment variable is set, pass its 
+		contents as arguments to setup.rb
+	* lib/rubygems/platform.rb:	
+	* test/test_gem_commands_uninstall_command.rb: Added
 2008-08-13  Wilson Bilkovich  <wilson@supremetyrant.com>
 
 	* lib/rubygems/uninstaller.rb:	Fix binary script uninstallation.
